--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "reactotron-react-js": "^3.3.1",
+    "reactotron-redux": "^3.1.1",
+    "reactotron-redux-saga": "^4.2.2",
     "styled-components": "^4.2.0"
   },
   "scripts": {
